--- a/index.html
+++ b/index.html
@@ -6,9 +6,28 @@
     <title>إرام للخدمات اللوجستية - شريكك الموثوق في الحلول اللوجستية المتكاملة</title>
     <meta name="description" content="إرام الدولية للمقاولات والخدمات اللوجستية تقدم حلولاً لوجستية متكاملة تشمل النقل، التخزين، الشحن الجوي والبحري، والخدمات الزراعية. شريكك الموثوق منذ 2015.">
     <meta name="keywords" content="إرام، لوجستيات، شحن، نقل، تخزين، خدمات زراعية، شحن جوي، شحن بحري، مقاولات، السعودية، الرياض، حلول لوجستية">
-    <link rel="stylesheet" href="assets/css/style.css">
+    <link rel="stylesheet" href="https://github.com/Osamah-Shahrah/iram/blob/main/style.css">
     <link href="https://fonts.googleapis.com/css2?family=Cairo:wght@300;400;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
+    <style>
+        .whatsapp-button {
+            position: fixed;
+            bottom: 20px;
+            right: 20px;
+            background-color: #25D366;
+            color: white;
+            padding: 15px 20px;
+            border-radius: 50%;
+            text-decoration: none;
+            font-size: 24px;
+            box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.3);
+            z-index: 1000; /* تأكد من أنه يظهر فوق المحتوى الآخر */
+        }
+        .whatsapp-button:hover {
+            opacity: 0.8;
+        }
+    </style>
+
 </head>
 <body>
     <!-- Header -->
@@ -229,6 +248,12 @@
             </div>
         </div>
     </section>
+    <a href="https://wa.me/رقم_هاتفك" class="whatsapp-button" target="_blank" rel="noopener noreferrer">
+        <i class="fab fa-whatsapp"></i> <!-- استخدم أيقونة واتساب من Font Awesome أو مكتبة أيقونات أخرى -->
+    </a>
+
+    <!--  أضف أيقونة واتساب من Font Awesome أو مكتبة أيقونات أخرى  -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" integrity="sha512-9usAa10IRO0HhonpyAIVpjrylPvoDwiPUiKdWk5t3PyolY1cOd4DSE0Ga+ri4AuTroPR5aQvXU9xC6qOPnzFeg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 
     <!-- Quote Request Section -->
     <section class="quote-section">
@@ -411,4 +436,6 @@
     <script src="assets/js/script.js"></script>
 </body>
 </html>
+
+
 
