--- a/index.html
+++ b/index.html
@@ -433,7 +433,7 @@
         <i class="fab fa-whatsapp"></i>
     </a>
 
-    <script src="assets/js/script.js"></script>
+    <script src="https://github.com/Osamah-Shahrah/iram/blob/main/script.js"></script>
 </body>
 </html>
 
