--- a/index.html
+++ b/index.html
@@ -56,6 +56,13 @@
             </div>
         </nav>
     </header>
+    
+ <a href="https://wa.me/00697734619110" class="whatsapp-button" target="_blank" rel="noopener noreferrer">
+        <i class="fab fa-whatsapp"></i> <!-- استخدم أيقونة واتساب من Font Awesome أو مكتبة أيقونات أخرى -->
+    </a>
+
+    <!--  أضف أيقونة واتساب من Font Awesome أو مكتبة أيقونات أخرى  -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" integrity="sha512-9usAa10IRO0HhonpyAIVpjrylPvoDwiPUiKdWk5t3PyolY1cOd4DSE0Ga+ri4AuTroPR5aQvXU9xC6qOPnzFeg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 
     <!-- Hero Section -->
     <section id="home" class="hero">
@@ -248,13 +255,7 @@
             </div>
         </div>
     </section>
-    <a href="https://wa.me/رقم_هاتفك" class="whatsapp-button" target="_blank" rel="noopener noreferrer">
-        <i class="fab fa-whatsapp"></i> <!-- استخدم أيقونة واتساب من Font Awesome أو مكتبة أيقونات أخرى -->
-    </a>
-
-    <!--  أضف أيقونة واتساب من Font Awesome أو مكتبة أيقونات أخرى  -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" integrity="sha512-9usAa10IRO0HhonpyAIVpjrylPvoDwiPUiKdWk5t3PyolY1cOd4DSE0Ga+ri4AuTroPR5aQvXU9xC6qOPnzFeg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-
+   
     <!-- Quote Request Section -->
     <section class="quote-section">
         <div class="container">
@@ -427,12 +428,6 @@
             </div>
         </div>
     </footer>
-
-    <!-- WhatsApp Floating Button -->
-    <a href="https://wa.me/966501234567" class="whatsapp-float" target="_blank">
-        <i class="fab fa-whatsapp"></i>
-    </a>
-
     <script src="https://github.com/Osamah-Shahrah/iram/blob/main/script.js"></script>
 </body>
 </html>
