--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>إرام للخدمات اللوجستية - شريكك الموثوق في الحلول اللوجستية المتكاملة</title>
     <meta name="description" content="إرام الدولية للمقاولات والخدمات اللوجستية تقدم حلولاً لوجستية متكاملة تشمل النقل، التخزين، الشحن الجوي والبحري، والخدمات الزراعية. شريكك الموثوق منذ 2015.">
     <meta name="keywords" content="إرام، لوجستيات، شحن، نقل، تخزين، خدمات زراعية، شحن جوي، شحن بحري، مقاولات، السعودية، الرياض، حلول لوجستية">
-    <link rel="stylesheet" href="https://github.com/Osamah-Shahrah/iram/blob/main/style.css">
+    <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css2?family=Cairo:wght@300;400;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <style>
@@ -428,7 +428,7 @@
             </div>
         </div>
     </footer>
-    <script src="https://github.com/Osamah-Shahrah/iram/blob/main/script.js"></script>
+    <script src="script.js"></script>
 </body>
 </html>
 
