--- a/index-en.html
+++ b/index-en.html
@@ -16,7 +16,7 @@
         <nav class="navbar">
             <div class="container">
                 <div class="nav-brand">
-                    <img src="assets/images/logo.png" alt="IRAM LOGISTICS" class="logo">
+                    <img src="logo/iram_logo_concept_1.png" alt="IRAM LOGISTICS" class="logo">
                 </div>
                 <ul class="nav-menu">
                     <li><a href="#home" class="nav-link">Home</a></li>
@@ -363,7 +363,7 @@
             <div class="footer-content">
                 <div class="footer-section">
                     <div class="footer-logo">
-                        <img src="assets/images/logo.png" alt="IRAM LOGISTICS">
+                        <img src="logo/iram_logo_concept_1.png" alt="IRAM LOGISTICS">
                         <p>Your Trusted Partner in Integrated Logistics Solutions</p>
                     </div>
                 </div>
