--- a/index.html
+++ b/index.html
@@ -9,24 +9,7 @@
     <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css2?family=Cairo:wght@300;400;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
-    <style>
-        .whatsapp-button {
-            position: fixed;
-            bottom: 20px;
-            right: 20px;
-            background-color: #25D366;
-            color: white;
-            padding: 15px 20px;
-            border-radius: 50%;
-            text-decoration: none;
-            font-size: 24px;
-            box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.3);
-            z-index: 1000; /* تأكد من أنه يظهر فوق المحتوى الآخر */
-        }
-        .whatsapp-button:hover {
-            opacity: 0.8;
-        }
-    </style>
+
 
 </head>
 <body>
@@ -35,7 +18,7 @@
         <nav class="navbar">
             <div class="container">
                 <div class="nav-brand">
-                    <img src="assets/images/logo.png" alt="IRAM LOGISTICS" class="logo">
+                    <img src="logo/iram_logo_concept_1.png" alt="IRAM LOGISTICS" class="logo">
                 </div>
                 <ul class="nav-menu">
                     <li><a href="#home" class="nav-link">الرئيسية</a></li>
@@ -136,7 +119,7 @@
                     </div>
                 </div>
                 <div class="about-image">
-                    <img src="assets/images/warehouse-modern.jpg" alt="مستودعات إرام الحديثة">
+                    <img src="image/1.jpg" alt="مستودعات إرام الحديثة">
                 </div>
             </div>
         </div>
@@ -156,7 +139,7 @@
                     </div>
                     <h3>خدمات النقل البري</h3>
                     <p>نقل البضائع بأمان وكفاءة عبر شبكة واسعة من الطرق المحلية والإقليمية، مع أسطول حديث ومتنوع يلبي كافة الأحجام والأوزان.</p>
-                    <img src="assets/images/delivery-truck.jpg" alt="خدمات النقل البري" class="service-image">
+                    <img src="image/2.jpg" alt="خدمات النقل البري" class="service-image">
                 </div>
                 <div class="service-card">
                     <div class="service-icon">
@@ -164,7 +147,7 @@
                     </div>
                     <h3>خدمات التخزين وإدارة المخزون</h3>
                     <p>مستودعات حديثة ومجهزة بأحدث التقنيات لضمان سلامة البضائع، مع أنظمة متطورة لإدارة المخزون والتوزيع الفعال.</p>
-                    <img src="assets/images/warehouse-workers.jpg" alt="خدمات التخزين" class="service-image">
+                    <img src="image/3.jpg" alt="خدمات التخزين" class="service-image">
                 </div>
                 <div class="service-card">
                     <div class="service-icon">
@@ -172,7 +155,7 @@
                     </div>
                     <h3>الخدمات اللوجستية الزراعية</h3>
                     <p>حلول لوجستية متخصصة للقطاع الزراعي والمنتجات الطازجة، تشمل النقل المبرد والتخزين في بيئات متحكم بها للحفاظ على الجودة.</p>
-                    <img src="assets/images/agriculture-logistics.jpg" alt="الخدمات الزراعية" class="service-image">
+                    <img src="image/4.jpg" alt="الخدمات الزراعية" class="service-image">
                 </div>
                 <div class="service-card">
                     <div class="service-icon">
@@ -180,7 +163,7 @@
                     </div>
                     <h3>الشحن الجوي السريع</h3>
                     <p>خدمات الشحن الجوي السريع للبضائع العاجلة والحساسة، مع شبكة عالمية تضمن وصول شحناتك في أسرع وقت ممكن.</p>
-                    <img src="assets/images/cargo-airplane.jpg" alt="الشحن الجوي" class="service-image">
+                    <img src="image/4.jpg" alt="الشحن الجوي" class="service-image">
                 </div>
                 <div class="service-card">
                     <div class="service-icon">
@@ -188,7 +171,7 @@
                     </div>
                     <h3>الشحن البحري الدولي</h3>
                     <p>حلول الشحن البحري للبضائع الثقيلة والحاويات، مع تغطية واسعة للموانئ العالمية وخدمات التخليص الجمركي.</p>
-                    <img src="assets/images/shipping-port.jpg" alt="الشحن البحري" class="service-image">
+                    <img src="image/5.jpg" alt="الشحن البحري" class="service-image">
                 </div>
                 <div class="service-card">
                     <div class="service-icon">
@@ -196,7 +179,7 @@
                     </div>
                     <h3>حلول سلسلة التوريد المتكاملة</h3>
                     <p>حلول لوجستية شاملة مصممة خصيصاً لاحتياجات عملك، من إدارة سلسلة التوريد إلى الاستشارات اللوجستية والتكامل التقني.</p>
-                    <img src="assets/images/global-network.jpg" alt="حلول متكاملة" class="service-image">
+                    <img src="image/1.jpg" alt="حلول متكاملة" class="service-image">
                 </div>
             </div>
         </div>
@@ -389,7 +372,7 @@
             <div class="footer-content">
                 <div class="footer-section">
                     <div class="footer-logo">
-                        <img src="assets/images/logo.png" alt="IRAM LOGISTICS">
+                        <img src="logo/iram_logo_concept_1.png" alt="IRAM LOGISTICS">
                         <p>شريكك الموثوق في الحلول اللوجستية المتكاملة</p>
                     </div>
                 </div>
