--- a/index-en.html
+++ b/index-en.html
@@ -6,11 +6,20 @@
     <title>IRAM Logistics - Your Trusted Partner in Integrated Logistics Solutions</title>
     <meta name="description" content="IRAM International for Contracting and Logistics Services offers integrated logistics solutions including transportation, warehousing, air and sea freight, and agricultural services. Your trusted partner since 2015.">
     <meta name="keywords" content="IRAM, logistics, shipping, transport, warehousing, agricultural services, air freight, sea freight, contracting, Saudi Arabia, Riyadh, logistics solutions">
-    <link rel="stylesheet" href="assets/css/style.css">
+    <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
 </head>
 <body>
+    y>
+
+    <a href="https://wa.me/00967734619110" class="whatsapp-button" target="_blank" rel="noopener noreferrer">
+        <i class="fab fa-whatsapp"></i> <!-- استخدم أيقونة واتساب من Font Awesome أو مكتبة أيقونات أخرى -->
+    </a>
+
+    <!--  أضف أيقونة واتساب من Font Awesome أو مكتبة أيقونات أخرى  -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" integrity="sha512-9usAa10IRO0HhonpyAIVpjrylPvoDwiPUiKdWk5t3PyolY1cOd4DSE0Ga+ri4AuTroPR5aQvXU9xC6qOPnzFeg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+
     <!-- Header -->
     <header class="header">
         <nav class="navbar">
@@ -110,7 +119,7 @@
                     </div>
                 </div>
                 <div class="about-image">
-                    <img src="assets/images/warehouse-modern.jpg" alt="IRAM Modern Warehouses">
+                    <img src="image/1.jpg" alt="IRAM Modern Warehouses">
                 </div>
             </div>
         </div>
@@ -130,7 +139,7 @@
                     </div>
                     <h3>Land Transportation Services</h3>
                     <p>Safe and efficient transportation of goods across a wide network of local and regional roads, with a modern and diverse fleet that meets all sizes and weights.</p>
-                    <img src="assets/images/delivery-truck.jpg" alt="Land Transportation Services" class="service-image">
+                    <img src="image/2.jpg" alt="Land Transportation Services" class="service-image">
                 </div>
                 <div class="service-card">
                     <div class="service-icon">
@@ -138,7 +147,7 @@
                     </div>
                     <h3>Warehousing and Inventory Management</h3>
                     <p>Modern warehouses equipped with the latest technologies to ensure the safety of goods, with advanced systems for efficient inventory management and distribution.</p>
-                    <img src="assets/images/warehouse-workers.jpg" alt="Warehousing Services" class="service-image">
+                    <img src="image/4.jpg" alt="Warehousing Services" class="service-image">
                 </div>
                 <div class="service-card">
                     <div class="service-icon">
@@ -146,7 +155,7 @@
                     </div>
                     <h3>Agricultural Logistics Services</h3>
                     <p>Specialized logistics solutions for the agricultural sector and fresh produce, including refrigerated transport and storage in controlled environments to maintain quality.</p>
-                    <img src="assets/images/agriculture-logistics.jpg" alt="Agricultural Logistics Services" class="service-image">
+                    <img src="image/3.jpg" alt="Agricultural Logistics Services" class="service-image">
                 </div>
                 <div class="service-card">
                     <div class="service-icon">
@@ -154,7 +163,7 @@
                     </div>
                     <h3>Express Air Freight</h3>
                     <p>Fast air freight services for urgent and sensitive goods, with a global network ensuring your shipments arrive as quickly as possible.</p>
-                    <img src="assets/images/cargo-airplane.jpg" alt="Air Freight" class="service-image">
+                    <img src="image/4.jpg" alt="Air Freight" class="service-image">
                 </div>
                 <div class="service-card">
                     <div class="service-icon">
@@ -162,7 +171,7 @@
                     </div>
                     <h3>International Sea Freight</h3>
                     <p>Sea freight solutions for heavy goods and containers, with wide coverage of global ports and customs clearance services.</p>
-                    <img src="assets/images/shipping-port.jpg" alt="Sea Freight" class="service-image">
+                    <img src="image/5.jpg" alt="Sea Freight" class="service-image">
                 </div>
                 <div class="service-card">
                     <div class="service-icon">
@@ -170,7 +179,7 @@
                     </div>
                     <h3>Integrated Supply Chain Solutions</h3>
                     <p>Comprehensive logistics solutions tailored to your business needs, from supply chain management to logistics consulting and technical integration.</p>
-                    <img src="assets/images/global-network.jpg" alt="Integrated Solutions" class="service-image">
+                    <img src="image/1.jpg" alt="Integrated Solutions" class="service-image">
                 </div>
             </div>
         </div>
@@ -402,13 +411,7 @@
             </div>
         </div>
     </footer>
-
-    <!-- WhatsApp Floating Button -->
-    <a href="https://wa.me/966501234567" class="whatsapp-float" target="_blank">
-        <i class="fab fa-whatsapp"></i>
-    </a>
-
-    <script src="assets/js/script.js"></script>
+    <script src="script.js"></script>
 </body>
 </html>
 
