--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
                     </div>
                 </div>
                 <div class="about-image">
-                    <img src="image/1.jpg" alt="مستودعات إرام الحديثة">
+                    <img src="image/1.jps" alt="مستودعات إرام الحديثة">
                 </div>
             </div>
         </div>
@@ -139,7 +139,7 @@
                     </div>
                     <h3>خدمات النقل البري</h3>
                     <p>نقل البضائع بأمان وكفاءة عبر شبكة واسعة من الطرق المحلية والإقليمية، مع أسطول حديث ومتنوع يلبي كافة الأحجام والأوزان.</p>
-                    <img src="image/2.jpg" alt="خدمات النقل البري" class="service-image">
+                    <img src="image/2.jps" alt="خدمات النقل البري" class="service-image">
                 </div>
                 <div class="service-card">
                     <div class="service-icon">
@@ -147,7 +147,7 @@
                     </div>
                     <h3>خدمات التخزين وإدارة المخزون</h3>
                     <p>مستودعات حديثة ومجهزة بأحدث التقنيات لضمان سلامة البضائع، مع أنظمة متطورة لإدارة المخزون والتوزيع الفعال.</p>
-                    <img src="image/3.jpg" alt="خدمات التخزين" class="service-image">
+                    <img src="image/3.jps" alt="خدمات التخزين" class="service-image">
                 </div>
                 <div class="service-card">
                     <div class="service-icon">
@@ -155,7 +155,7 @@
                     </div>
                     <h3>الخدمات اللوجستية الزراعية</h3>
                     <p>حلول لوجستية متخصصة للقطاع الزراعي والمنتجات الطازجة، تشمل النقل المبرد والتخزين في بيئات متحكم بها للحفاظ على الجودة.</p>
-                    <img src="image/4.jpg" alt="الخدمات الزراعية" class="service-image">
+                    <img src="image/4.jps" alt="الخدمات الزراعية" class="service-image">
                 </div>
                 <div class="service-card">
                     <div class="service-icon">
@@ -163,7 +163,7 @@
                     </div>
                     <h3>الشحن الجوي السريع</h3>
                     <p>خدمات الشحن الجوي السريع للبضائع العاجلة والحساسة، مع شبكة عالمية تضمن وصول شحناتك في أسرع وقت ممكن.</p>
-                    <img src="image/4.jpg" alt="الشحن الجوي" class="service-image">
+                    <img src="image/4.jps" alt="الشحن الجوي" class="service-image">
                 </div>
                 <div class="service-card">
                     <div class="service-icon">
@@ -171,7 +171,7 @@
                     </div>
                     <h3>الشحن البحري الدولي</h3>
                     <p>حلول الشحن البحري للبضائع الثقيلة والحاويات، مع تغطية واسعة للموانئ العالمية وخدمات التخليص الجمركي.</p>
-                    <img src="image/5.jpg" alt="الشحن البحري" class="service-image">
+                    <img src="image/5.jps" alt="الشحن البحري" class="service-image">
                 </div>
                 <div class="service-card">
                     <div class="service-icon">
@@ -179,7 +179,7 @@
                     </div>
                     <h3>حلول سلسلة التوريد المتكاملة</h3>
                     <p>حلول لوجستية شاملة مصممة خصيصاً لاحتياجات عملك، من إدارة سلسلة التوريد إلى الاستشارات اللوجستية والتكامل التقني.</p>
-                    <img src="image/1.jpg" alt="حلول متكاملة" class="service-image">
+                    <img src="image/1.jps" alt="حلول متكاملة" class="service-image">
                 </div>
             </div>
         </div>
