--- a/index-en.html
+++ b/index-en.html
@@ -119,7 +119,7 @@
                     </div>
                 </div>
                 <div class="about-image">
-                    <img src="image/1.jpg" alt="IRAM Modern Warehouses">
+                    <img src="image/1.jps" alt="IRAM Modern Warehouses">
                 </div>
             </div>
         </div>
@@ -139,7 +139,7 @@
                     </div>
                     <h3>Land Transportation Services</h3>
                     <p>Safe and efficient transportation of goods across a wide network of local and regional roads, with a modern and diverse fleet that meets all sizes and weights.</p>
-                    <img src="image/2.jpg" alt="Land Transportation Services" class="service-image">
+                    <img src="image/2.jps" alt="Land Transportation Services" class="service-image">
                 </div>
                 <div class="service-card">
                     <div class="service-icon">
@@ -147,7 +147,7 @@
                     </div>
                     <h3>Warehousing and Inventory Management</h3>
                     <p>Modern warehouses equipped with the latest technologies to ensure the safety of goods, with advanced systems for efficient inventory management and distribution.</p>
-                    <img src="image/4.jpg" alt="Warehousing Services" class="service-image">
+                    <img src="image/4.jps" alt="Warehousing Services" class="service-image">
                 </div>
                 <div class="service-card">
                     <div class="service-icon">
@@ -155,7 +155,7 @@
                     </div>
                     <h3>Agricultural Logistics Services</h3>
                     <p>Specialized logistics solutions for the agricultural sector and fresh produce, including refrigerated transport and storage in controlled environments to maintain quality.</p>
-                    <img src="image/3.jpg" alt="Agricultural Logistics Services" class="service-image">
+                    <img src="image/3.jps" alt="Agricultural Logistics Services" class="service-image">
                 </div>
                 <div class="service-card">
                     <div class="service-icon">
@@ -163,7 +163,7 @@
                     </div>
                     <h3>Express Air Freight</h3>
                     <p>Fast air freight services for urgent and sensitive goods, with a global network ensuring your shipments arrive as quickly as possible.</p>
-                    <img src="image/4.jpg" alt="Air Freight" class="service-image">
+                    <img src="image/4.jps" alt="Air Freight" class="service-image">
                 </div>
                 <div class="service-card">
                     <div class="service-icon">
@@ -171,7 +171,7 @@
                     </div>
                     <h3>International Sea Freight</h3>
                     <p>Sea freight solutions for heavy goods and containers, with wide coverage of global ports and customs clearance services.</p>
-                    <img src="image/5.jpg" alt="Sea Freight" class="service-image">
+                    <img src="image/5.jps" alt="Sea Freight" class="service-image">
                 </div>
                 <div class="service-card">
                     <div class="service-icon">
@@ -179,7 +179,7 @@
                     </div>
                     <h3>Integrated Supply Chain Solutions</h3>
                     <p>Comprehensive logistics solutions tailored to your business needs, from supply chain management to logistics consulting and technical integration.</p>
-                    <img src="image/1.jpg" alt="Integrated Solutions" class="service-image">
+                    <img src="image/1.jps" alt="Integrated Solutions" class="service-image">
                 </div>
             </div>
         </div>
