--- a/index-en.html
+++ b/index-en.html
@@ -35,8 +35,8 @@
                     <li><a href="#contact" class="nav-link">Contact Us</a></li>
                 </ul>
                 <div class="language-switcher">
-                    <a href="index.html" class="lang-link">AR</a>
-                    <a href="index-en.html" class="lang-link active">EN</a>
+                    <a href="index.html" class="lang-link" style="color: black;" >AR</a>
+                    <a href="index-en.html" class="lang-link active" style="color: black;">EN</a>
                 </div>
                 <div class="hamburger">
                     <span></span>
