--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
                     <li><a href="#contact" class="nav-link">اتصل بنا</a></li>
                 </ul>
                 <div class="language-switcher">
-                    <a href="index.html" class="lang-link active">AR</a>
-                    <a href="index-en.html" class="lang-link">EN</a>
+                    <a href="index.html" class="lang-link active" style="color: black;">AR</a>
+                    <a href="index-en.html" class="lang-link" style="color: black;">EN</a>
                 </div>
                 <div class="hamburger">
                     <span></span>
@@ -60,28 +60,7 @@
                 </div>
             </div>
         </div>
-        <div class="hero-stats">
-            <div class="container">
-                <div class="stats-grid">
-                    <div class="stat-item">
-                        <div class="stat-number">1000+</div>
-                        <div class="stat-label">عميل راضٍ</div>
-                    </div>
-                    <div class="stat-item">
-                        <div class="stat-number">50+</div>
-                        <div class="stat-label">مدينة مغطاة</div>
-                    </div>
-                    <div class="stat-item">
-                        <div class="stat-number">24/7</div>
-                        <div class="stat-label">خدمة العملاء</div>
-                    </div>
-                    <div class="stat-item">
-                        <div class="stat-number">99%</div>
-                        <div class="stat-label">معدل التسليم في الوقت</div>
-                    </div>
-                </div>
-            </div>
-        </div>
+
     </section>
 
     <!-- Tracking Section -->
