--- a/index.html
+++ b/index.html
@@ -386,7 +386,7 @@
                 </div>
             </div>
             <div class="footer-bottom">
-                <p>&copy; 2025 إرام للخدمات اللوجستية. جميع الحقوق محفوظة.</p>
+                <p>&copy; 2025  جميع الحقوق محفوظة.إرام للخدمات اللوجستية.</p>
             </div>
         </div>
     </footer>
