--- a/index-en.html
+++ b/index-en.html
@@ -13,7 +13,7 @@
 <body>
     y>
 
-    <a href="https://wa.me/00967734619110" class="whatsapp-button" target="_blank" rel="noopener noreferrer">
+    <a href="https://wa.me/967734619110" class="whatsapp-button" target="_blank" rel="noopener noreferrer">
         <i class="fab fa-whatsapp"></i> <!-- استخدم أيقونة واتساب من Font Awesome أو مكتبة أيقونات أخرى -->
     </a>
 
@@ -301,7 +301,7 @@
                         </div>
                         <div class="contact-details">
                             <h3>Phone</h3>
-                            <p>+966 11 123 4567<br>+966 50 123 4567</p>
+                            <p>+967734619110<br>+967734619110</p>
                         </div>
                     </div>
                     <div class="contact-item">
@@ -385,7 +385,7 @@
                 </div>
             </div>
             <div class="footer-bottom">
-                <p>&copy; 2025 IRAM Logistics. All rights reserved.</p>
+                <p>&copy; All rights reserved. 2025 IRAM Logistics. </p>
             </div>
         </div>
     </footer>
