--- a/index-en.html
+++ b/index-en.html
@@ -1,26 +1,20 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>IRAM Logistics - Your Trusted Partner in Integrated Logistics Solutions</title>
-  <meta name="description" content="IRAM International for Contracting and Logistics Services offers integrated logistics solutions including transportation, warehousing, air and sea freight, and agricultural services. Your trusted partner since 2015.">
-  <meta name="keywords" content="IRAM, logistics, shipping, transport, warehousing, agricultural services, air freight, sea freight, contracting, Saudi Arabia, Riyadh, logistics solutions">
-  <meta property="og:title" content="IRAM Logistics - Integrated Solutions">
-  <meta property="og:description" content="Your trusted partner in logistics solutions since 2015.">
-  <meta property="og:type" content="website">
-  <meta property="og:image" content="logo/iram_logo_concept_1.png">
-  <meta property="og:url" content="https://iramlogistics.com">
-  <link rel="icon" href="favicon.ico">
-  <link rel="preload" href="style.css" as="style">
-  <link rel="stylesheet" href="style.css">
-  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;600;700&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>IRAM Logistics - Your Trusted Partner in Integrated Logistics Solutions</title>
+    <meta name="description" content="IRAM International for Contracting and Logistics Services offers integrated logistics solutions including transportation, warehousing, air and sea freight, and agricultural services. Your trusted partner since 2015.">
+    <meta name="keywords" content="IRAM, logistics, shipping, transport, warehousing, agricultural services, air freight, sea freight, contracting, Saudi Arabia, Riyadh, logistics solutions">
+    <link rel="stylesheet" href="style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;600;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
 </head>
 <body>
-  <a href="https://wa.me/967734619110" class="whatsapp-button" target="_blank" rel="noopener noreferrer" aria-label="Contact us on WhatsApp">
-    <i class="fab fa-whatsapp"></i>
-  </a>
+  
+    <a href="https://wa.me/967734619110" class="whatsapp-button" target="_blank" rel="noopener noreferrer">
+        <i class="fab fa-whatsapp"></i> <!-- استخدم أيقونة واتساب من Font Awesome أو مكتبة أيقونات أخرى -->
+    </a>
 
     <!--  أضف أيقونة واتساب من Font Awesome أو مكتبة أيقونات أخرى  -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" integrity="sha512-9usAa10IRO0HhonpyAIVpjrylPvoDwiPUiKdWk5t3PyolY1cOd4DSE0Ga+ri4AuTroPR5aQvXU9xC6qOPnzFeg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
@@ -349,37 +343,51 @@
         </div>
     </section>
 
-
-
-
-
-
-
-
-
-
-
-
-  
-  <footer class="footer">
-    <div class="container">
-      <div class="footer-content">
-        <!-- ... -->
-        <div class="footer-section">
-          <h3>Follow Us</h3>
-          <div class="social-links">
-            <a href="#" class="social-link" aria-label="Facebook"><i class="fab fa-facebook"></i></a>
-            <a href="#" class="social-link" aria-label="Twitter"><i class="fab fa-twitter"></i></a>
-            <a href="#" class="social-link" aria-label="Instagram"><i class="fab fa-instagram"></i></a>
-            <a href="#" class="social-link" aria-label="LinkedIn"><i class="fab fa-linkedin"></i></a>
-          </div>
+    <!-- Footer -->
+    <footer class="footer">
+        <div class="container">
+            <div class="footer-content">
+                <div class="footer-section">
+                    <div class="footer-logo">
+                        <img src="logo/iram_logo_concept_1.png" alt="IRAM LOGISTICS">
+                        <p>Your Trusted Partner in Integrated Logistics Solutions</p>
+                    </div>
+                </div>
+                <div class="footer-section">
+                    <h3>Our Services</h3>
+                    <ul>
+                        <li><a href="#services">Land Transportation Services</a></li>
+                        <li><a href="#services">Warehousing and Inventory Management</a></li>
+                        <li><a href="#services">Agricultural Logistics Services</a></li>
+                        <li><a href="#services">Express Air Freight</a></li>
+                        <li><a href="#services">International Sea Freight</a></li>
+                        <li><a href="#services">Integrated Supply Chain Solutions</a></li>
+                    </ul>
+                </div>
+                <div class="footer-section">
+                    <h3>Quick Links</h3>
+                    <ul>
+                        <li><a href="#about">About Us</a></li>
+                        <li><a href="#tracking">Track Shipment</a></li>
+                        <li><a href="#contact">Contact Us</a></li>
+                        <li><a href="#quote">Get a Quote</a></li>
+                    </ul>
+                </div>
+                <div class="footer-section">
+                    <h3>Follow Us</h3>
+                    <div class="social-links">
+                        <a href="#" class="social-link"><i class="fab fa-facebook"></i></a>
+                        <a href="#" class="social-link"><i class="fab fa-twitter"></i></a>
+                        <a href="#" class="social-link"><i class="fab fa-instagram"></i></a>
+                        <a href="#" class="social-link"><i class="fab fa-linkedin"></i></a>
+                    </div>
+                </div>
+            </div>
+            <div class="footer-bottom">
+                <p>&copy; All rights reserved. 2025 IRAM Logistics. </p>
+            </div>
         </div>
-      </div>
-      <div class="footer-bottom">
-        <p>&copy; All rights reserved. 2025 IRAM Logistics.</p>
-      </div>
-    </div>
-  </footer>
-  <script src="script.js" defer></script>
+    </footer>
+    <script src="script.js"></script>
 </body>
 </html>
